
PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-4576: Nightly test HCat_DDL_2 fails with TDE ON (nmaheshwari via daijy)

PIG-4873: InputSplit.getLocations return null and result a NPE in Pig (daijy)

PIG-4895: User UDFs relying on mapreduce.job.maps broken in Tez (rohini)

PIG-4883: MapKeyType of splitter was set wrongly in specific multiquery case (kellyzly via rohini)

PIG-4887: Parameter substitution skipped with glob on register (knoguchi)

PIG-4889: Replacing backslash fails as lexical error (knoguchi)

PIG-4880: Overlapping of parameter substitution names inside&outside a macro fails with NPE (knoguchi)

PIG-4881: TestBuiltin.testUniqueID failing on hadoop-1.x (knoguchi)

PIG-4888: Line number off when reporting syntax error inside a macro (knoguchi)

PIG-3772: Syntax error when casting an inner schema of a bag and line break involved (ssvinarchukhorton via knoguchi)

PIG-4892: removing /tmp/output before UT (daijy)

PIG-4882: Remove hardcoded groovy.grape.report.downloads=true from DownloadResolver (erwaman via daijy)

PIG-4581: thread safe issue in NodeIdGenerator (rcatherinot via rohini)

PIG-4878: Fix issues from PIG-4847 (rohini)

PIG-4877: LogFormat parser fails test (nielsbasjes via daijy)

PIG-4860: Loading data using OrcStorage() accepts only default FileSystem path (beriaanirudh via rohini)

PIG-4868: Low values for bytes.per.reducer configured by user not honored in Tez for inputs (rohini)

PIG-4869: Removing unwanted configuration in Tez broke ConfiguredFailoverProxyProvider (rohini)

PIG-4867: -stop_on_failure does not work with Tez (rohini)

PIG-4844: Tez AM runs out of memory when vertex has high number of outputs (rohini)
